# pycdxml

./: .gitignore  .hgignore  LICENSE.txt  MANIFEST.in  README.md  cdxml_styler.py  requirements.txt  setup.cfg  setup.py
.github/workflows/: test_on_push.yml
cdxml_slide_generator/: ACS 1996.cdxml  Angewandte.cdxml  Comic.cdxml  Kraft.cdxml  RSC.cdxml  Wiley.cdxml  cdxml_slide_generator.py  template.cdxml
cdxml_styler/: README.md  cdxml_styler.py
chemdraw_converter/: __init__.py  cdx_objects.yml  cdx_properties.yml  charsets.yml  chemdraw_io.py  chemdraw_objects.py  chemdraw_reader.py  chemdraw_types.py  rdkit_chemdraw.py
chemdraw_tools/cdxml_slide_generator/: Comic.cdxml  __init__.py  cdxml_slide_generator.py
chemdraw_tools/cdxml_styler/: README.md  __init__.py  cdxml_styler.py
chemdraw_tools/chemdraw_converter/: README.md  logging.yml
pycdxml/cdxml_converter/: README.md  cdx_objects.yml  cdx_properties.yml  chemdraw_io.py  chemdraw_objects.py  chemdraw_types.py  rdkit_chemdraw.py
pycdxml/cdxml_slide_generator/: ACS 1996.cdxml  README.md  cdxml_slide_generator.py
pycdxml/cdxml_styler/: README.md  cdxml_styler.py  styles.yml
pycdxml/utils/: cdxml_io.py  font_handling.py  geometry.py  style.py
tests/: cdxml_converter_tests.py  cdxml_slide_generator_tests.py  cdxml_styler_tests.py
tests/files/: ACS 1996.cdxml  Aminopropyl_LonePair.mol  Aminopropyl_radical.mol  CHEMBL4303146.dbl_bond_unknown_stereo.mol  CHEMBL4889297_coords.mol  CHEMBL595085.isotope_test.mol  CHEMBL6509.impl_H_on_heteroatom.mol  CHEMBL69710.no_bonds.mol  embedded_image_test.cdx  embedded_image_test.cdxml  embedded_reference.cdxml  magnesium_citrate.cdx  magnesium_citrate.cdxml  reference_style.cdxml  represents.cdxml  represents_b64cdx.txt  result_cdx_to_cdxml.cdxml  result_cdxml_to_cdx.cdx  salt_reference.cdx  salt_reference.cdxml  single_node.cdxml  single_node_reference.cdxml  standard_b64.txt  standard_test.cdx  standard_test.cdxml  styler_charge.cdxml  styler_charge_reference.cdxml  styler_test_input.cdxml
