[metadata]
name = pycdxml
version = 0.1.0
author = Joos Kiener
author_email = joos.kiener@gmail.com
description = Work with and convert between ChemDraw Formats cdx and cdxml
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/kienerj/PyCDXML
project_urls =
    Bug Tracker = https://github.com/kienerj/PyCDXML/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Development Status :: 3 - Alpha

[options]
packages = find:
python_requires = >=3.6
install_requires =    
    numpy
    PyYAML
    anytree
    lxml
include_package_data = True