[metadata]
name = pycdxml
version = 0.1.6-beta
author = Joos Kiener
author_email = joos.kiener@gmail.com
description = Work with and convert between ChemDraw Formats cdx and cdxml
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/kienerj/PyCDXML
project_urls =
    Bug Tracker = https://github.com/kienerj/PyCDXML/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Operating System :: OS Independent
    Development Status :: 4 - Beta

[options]
packages = find:
python_requires = >=3.6
include_package_data = True
install_requires =    
    numpy
    PyYAML
    lxml
    fonttools
    matplotlib
